[package]
name = "matrixcalcapp"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
gloo = "0.6.1"
wasm-bindgen = "0.2.79"
web-sys = {version = "0.3.56", features = ["HtmlInputElement"]}
